Adds information about Github repo, tries to fix sorting

--- a/src/views/help.html
+++ b/src/views/help.html
@@ -21,4 +21,5 @@
 
 <h2>About</h2>
 <p>This is a webpage accompanying RedBot, where it meticulously transcribes messages from Telegram, so folks from our community can be up to date with latest blockchain and ICO related news.</p>
+<p>If you find any issues with RedBot or this transcript, please create an issue at the <a href="https://github.com/are1000/redbot">Github repo</a>.</p>
 <p style="font-size: 14px;">RedBot and this website was created by Are (<a href="https://github.com/are1000">@are1000</a>)</p>
